force-app/main/default/objects/Issue_Modifications__c/Issue_Modifications__c.object-meta.xml
<CustomObject>
    <description>A Wage Deputy can record modifications to violations/issues so that the amounts are accurate.</description>
    <label>Issue Modification</label>
    <nameField>
        <displayFormat>WI - {00000}</displayFormat>
        <label>Issue Modifications Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Issue Modifications</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>