force-app/main/default/objects/Issue_Modifications__c/fields/Case_Violation__c.field-meta.xml
<CustomField>
    <fullName>Case_Violation__c</fullName>
    <description>Case Violation</description>
    <label>Case Violation</label>
    <referenceTo>DIR_Violation__c</referenceTo>
    <relationshipName>Issue_Modifications</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>