force-app/main/default/objects/Issue_Modifications__c/fields/Modification_Date__c.field-meta.xml
<CustomField>
    <fullName>Modification_Date__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <description>Modification Date</description>
    <label>Modification Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>