force-app/main/default/objects/Issue_Modifications__c/fields/Modified_Earned_Amount__c.field-meta.xml
<CustomField>
    <fullName>Modified_Earned_Amount__c</fullName>
    <description>When the amount earned is not what was initially captured, this is the new amount earned for the issue. Value is passed to flow and updates the earned amount on the issue</description>
    <inlineHelpText>Modify the amount earned to a different value as needed. This value will update the earned amount on the issue.</inlineHelpText>
    <label>Modified Earned Amount (optional)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>